--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700;800&display=swap');
 
 *{
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
 }
 section {
     position: relative;
@@ -63,9 +63,9 @@ section .container a {
     letter-spacing: 2px;
 }
 section .container a:hover {
-    color: black;
+    color: #1f1e24;
     background-color: white;
-    border-left: 5px solid black;
+    border-left: 5px solid #1f1e24;
 }
 section .logo {
     position: relative;
@@ -102,15 +102,15 @@ section .logo img {
     font-weight: 700
 }
 .social-networks li a:hover {
-    color:black;
+    color:#1f1e24;
 }
 .nav {
     position: absolute;
     top: 40px;
-    left: 137px;
+    left: 140px;
     display: flex;
-    border-left: 5px solid black;
-    border-bottom: 5px solid black;
+    border-left: 5px solid #1f1e24;
+    border-bottom: 5px solid #1f1e24;
     padding-left: 20px;
     animation: left-in .5s ease-in forwards;
     animation-delay: 0s;
@@ -128,7 +128,7 @@ section .logo img {
     font-weight: 700;
 }
 .nav li a:hover {
-    color: black;
+    color: #1f1e24;
 }
 @keyframes fade-in {
     0% {
